--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>Document</title>
   </head>
   <body>
-    <section class="showcase active">
+    <section class="showcase">
       <header>
         <h2 class="logo">
           <a href="/"> MoReview </a>
         </h2>
-        <div class="toggle active"></div>
+        <div class="toggle"></div>
       </header>
 
       <div class="text">
@@ -50,7 +50,7 @@
 
     <div class="menu">
       <ul>
-        <li><a href="#">This Site</a></li>
+        <li><a href="/site.html">This Site</a></li>
         <li><a href="#">Arrays</a></li>
         <li><a href="#">Strings</a></li>
       </ul>
