working on section page ab this.site

--- a/site.html
+++ b/site.html
@@ -29,7 +29,48 @@
       </div>
     </section>
 
-    <section class="beginningsText">Site</section>
+    <section class="beginningsText">
+      <h2 class="chapter">Tutorial</h2>
+      <div class="divider light"></div>
+
+      <div class="youtube">
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/8MgpE2DTTKA?si=0bamWJ_jotkjNkvg"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+      </div>
+
+      <p>
+        This was the tutorial I used as a boilerplate. Obviously the landing
+        page did not have a video. I chose not to put a video, because I don't
+        want to force it too hard. If I find a great suitcase to implement a
+        video, I will do it. Maybe for the future, I could have a background
+        video of users coding.
+        <br />
+        <br />
+        TraversyMedia creates some amazing tutorials that I have been following
+        as of late. He helped me come up with the idea for this site.
+      </p>
+
+      <h2 class="chapter">Tech Stack <span>*Subject to change</span></h2>
+      <div class="divider light"></div>
+      <div class="tech-stack">
+        <img src="images/css.png" alt="css picture" />
+        <img src="images/html.png" alt="html picture" />
+        <img src="images/js.png" alt="js picture" />
+      </div>
+      <p>
+        I am limited to only HTML, CSS, and JS right now. My plan is to work on
+        these, even without Boostrap, React, etc. so that I can get as
+        comfortable as I can. I would love to add the above to future projects,
+        or ones that need improvement.
+      </p>
+    </section>
 
     <div class="menu">
       <ul>
