only fixed error with sidebar. Adding new page tomorrow(9/19)

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           ipsa commodi mollitia voluptatem placeat perspiciatis eligendi
           asperiores quia veniam?
         </p>
-        <a href="">Explore</a>
+        <a href="/site.html">Explore</a>
       </div>
 
       <div class="sites">
